Side scrolling track list is now working (style wise). The tracks may be added though the tracks do nothing.
	modified:   .gitignore
	modified:   lib/view/queue.coffee
	modified:   stylesheets/main.less

See #2.

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -12,6 +12,32 @@
   background-repeat: no-repeat;
 }
 
-.playlist-queue {
+.pl-queue {
+  height: 183px;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+@pl-album-length: 100px;
+
+.pl-queue ul {
+  overflow-x: auto;
+  white-space: nowrap;
   height: 150px;
+  background-color: #ddd;
+  color: green;
+  margin: 0px;
+}
+
+li.pl-album {
+  text: center;
+  margin: 10px;
+  color: black;
+  display: inline-block;
+  width: @pl-album-length;
+}
+
+div.pl-album {
+  height: @pl-album-length;
+  background-color: green;
 }
