Working on #2. I have switched out some of my CSS to use atom's CSS as specified in the Atom Style Guide. I have also added some method stubs to the QueueView class.

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -18,22 +18,20 @@
   white-space: nowrap;
 }
 
-@pl-album-length: 100px;
+@pl-album-length: 110px;
 
 .pl-queue ul {
   overflow-x: auto;
-  white-space: nowrap;
   height: 150px;
   background-color: #ddd;
   color: green;
   margin: 0px;
+  padding-left: 10px;
 }
 
 li.pl-album {
-  text: center;
-  margin: 10px;
+  margin: 20px;
   color: black;
-  display: inline-block;
   width: @pl-album-length;
 }
 
