The proper @fa-font-path for #5

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -7,8 +7,10 @@
 
 
 @import "../bundle/components/fontawesome/less/font-awesome.less";
-//@fa-font-path: "atom://playlist/bundle/components/fontawesome/fonts";
-@fa-font-path: "file:///Users/dawson/develop/projects/personal/atom-playlist/bundle/components/fontawesome/fonts";
+@fa-font-path: "atom://playlist/bundle/components/fontawesome/fonts";
+
+// this works though is not a proper solution.
+//@fa-font-path: "file:///Users/dawson/develop/projects/personal/atom-playlist/bundle/components/fontawesome/fonts";
 
 .yeoman {
   // The background is loaded from the 'bundle' directory.
