--- a/stylesheets/search.less
+++ b/stylesheets/search.less
@@ -1,14 +1,14 @@
-.track-search {
-  .track {
-    .track-icon {
-      display: inline-block;
-      line-height: 1;
-      -webkit-font-smoothing: antialiased;
-      text-decoration: none;
-      font-size: 16px;
-      width: 16px;
-      height: 16px;
-      margin-right: 5px;
-    }
-  }
-}
+// .track-search {
+//   .track {
+//     .track-icon {
+//       display: inline-block;
+//       line-height: 1;
+//       -webkit-font-smoothing: antialiased;
+//       text-decoration: none;
+//       font-size: 16px;
+//       width: 16px;
+//       height: 16px;
+//       margin-right: 5px;
+//     }
+//   }
+// }
